# Tenso

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: release.yml
convex/: auth.ts  crons.ts  http.ts  schema.ts  sync.ts  teams.ts  users.ts
convex/_generated/: api.d.ts
shared/: Cargo.toml
shared/src/: models.rs  version.rs
src/: App.tsx  index.html  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/codegen/: mod.rs
src-tauri/src/commands/: codegen.rs  collections.rs  environments.rs  history.rs  http.rs  import.rs  sync.rs  websocket.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/import/: curl.rs  openapi.rs  postman.rs  tenso.rs
src-tauri/src/websocket/: mod.rs
src/components/environments/: EnvManager.tsx
src/components/import/: CurlImport.tsx  PostmanImport.tsx  TensoImport.tsx  shared.tsx
src/components/layout/: CollectionTree.tsx  HistoryPanel.tsx  Sidebar.tsx  SidebarContextMenus.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx
src/components/request/: AuthEditor.tsx  BodyEditor.tsx  RequestPanel.tsx  UrlBar.tsx  WsMessagesTab.tsx
src/components/response/: JsonTreeView.tsx  ResponsePanel.tsx  SyntaxView.tsx
src/components/shared/: CollectionPickerDialog.tsx  ContextMenu.tsx  KeyValueGrid.tsx  UpdateCheck.tsx  VirtualList.tsx
src/lib/: api.ts  auth.ts  convex.ts  curl.test.ts  export.test.ts  invites.ts  migration.ts  platform.ts  session.ts  sync.test.ts  sync.ts  telemetry.ts  themes.ts  tweakcn.ts
src/pages/: MainWorkspace.tsx  Settings.tsx
src/pages/settings/: TeamSettings.tsx  TelemetrySettings.tsx  ThemeSettings.tsx
src/stores/: collections.ts  environments.ts  globals.ts  history.test.ts  history.ts  request.ts
sync-server/: Cargo.toml  Dockerfile  docker-compose.yml
sync-server/src/: config.rs  main.rs
sync-server/src/api/: mod.rs
sync-server/src/auth/: mod.rs
sync-server/src/db/: migrations.rs  mod.rs
sync-server/src/sync/: mod.rs
