[package]
name = "tenso"
version = "0.1.0"
edition = "2021"

[lib]
name = "tenso_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tenso-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
boa_engine = "0.19"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
nom = "7"
openapiv3 = "2"
dashmap = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
shell-words = "1"
futures-util = "0.3"
