[package]
name = "reqlite-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
reqlite-shared = { path = "../shared" }
axum = { version = "0.7", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
argon2 = "0.5"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
